# TrafficSimulation

./: .gitignore  CMakeLists.txt
include/: TrafficSimulation.h  Vehicle.h
src/: TrafficSimulation.cpp  Vehicle.cpp  main.cpp
